[package]
name = "resolution"
version = "0.1.0"
authors = ["Eric Sheppard"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
# avoid the "clock" feature
default-features = false
features = ["serde", "std"]

[dev-dependencies]
anyhow = "1"
serde_json = "1"
env_logger = "0.6"
