[package]
name = "resolution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1.0.136"
features = ["derive"]
optional = true

[dependencies.chrono]
version = "0.4.19"
# avoid the "clock" feature
default-features = false
features = ["std"]


[features]
with_serde = ["serde","chrono/serde"]